data service basic

--- a/package.json
+++ b/package.json
@@ -22,10 +22,19 @@
     "@types/googlemaps": "^3.39.3",
     "bootstrap": "^4.4.1",
     "bootstrap4": "0.0.1-security",
+    "elasticsearch": "^16.7.1",
     "ngx-bootstrap": "^5.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@elastic/elasticsearch": "7.6.0"
+  },
+  "overrides": {
+    "elasticsearch": {
+      "main": [
+        "elasticsearch.angular.js"
+      ]
+    }
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
