--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@elastic/elasticsearch": "7.6.0",
     "@types/googlemaps": "^3.39.3",
+    "aws-sdk": "^2.653.0",
+    "aws4": "^1.9.1",
     "bootstrap": "^4.4.1",
     "bootstrap4": "0.0.1-security",
     "elasticsearch": "^16.7.1",
     "ngx-bootstrap": "^5.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@elastic/elasticsearch": "7.6.0"
+    "zone.js": "~0.10.2"
   },
   "overrides": {
     "elasticsearch": {
